GL/src/test/deca/codegen/valid/deca_sans_objet/if_Else/if_simple.deca
// Description :
// Test de if simple.
//
// Resultats :
// 3

{
    int x;
    x = 3;
    if (x > 0) {
        print(x);
    }
}